<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_12"
    tools:context="baktiyar.com.testfragment.ui.detailes.DetailedNoteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/tvDetailedNoteTitle"
        style="@style/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/create_note" />

    <LinearLayout
        android:id="@+id/detailedDescLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tvDetailedNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/create_note" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailedClockLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_8"
            android:src="@drawable/ic_date" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_8"
            android:text="@string/do_until" />

        <TextView
            android:id="@+id/tvDetailedNoteDoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_8"
            tools:text="@string/example_date" />

        <TextView
            android:id="@+id/tvDetailedNoteDoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_8"
            tools:text="@string/example_time" />
    </LinearLayout>

</LinearLayout>
