<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="baktiyar.com.testfragment.ui.create_note.CreateNoteActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_12"
            android:paddingRight="@dimen/margin_12"
            android:paddingTop="@dimen/margin_8">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_12"
            android:paddingRight="@dimen/margin_12"
            android:paddingTop="@dimen/margin_8">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDoTime"
            style="@style/CustomTextLayout"
            android:drawableRight="@drawable/ic_arrow"
            android:gravity="center_vertical"
            android:hint="@string/do_time"
            android:paddingStart="@dimen/margin_12" />

    </android.support.v7.widget.CardView>

    <Button
        android:layout_margin="@dimen/margin_12"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btnSaveNote"
        style="@style/BTN"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/save" />

</LinearLayout>
